# sozocraft

./: .gitignore  DEVLOG.md  README.md  TODO.md  index.html  package.json  pnpm-lock.yaml
docs/: architecture.md
spec/: ui.md
src/: App.tsx  api.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app_state.rs  error_log.rs  filename_template.rs  gemini.rs  gemini_models.rs  image_meta.rs  lib.rs  local_config.rs  main.rs  models.rs  openai_image.rs  prompt_library.rs  reference_image_cache.rs  xai_image.rs
src/components/: GenerationPanel.tsx  ImageLightbox.tsx  OutputColumn.tsx  PromptColumn.tsx  SettingsPanel.tsx  common.tsx
src/hooks/: useAppState.ts  useGeneration.ts  useHistoryDate.ts  useImagePreviews.ts  useModelOptions.ts  usePromptLibrary.ts
src/models/: geminiImageModels.ts  imageProviders.ts
src/utils/: dates.ts  history.ts  outputTemplate.ts
