[package]
name = "visioncraft"
version = "0.2.0"
description = "A desktop AI visual generation studio and prompt workspace."
authors = ["VisionCraft"]
edition = "2021"

[lib]
name = "visioncraft_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
sanitize-filename = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.9", features = [] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "time"] }
toml = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }

[features]
default = []
